// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionCard should not render hasRole 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Usage title"
                class=""
                data-ouia-component-id="Usage title"
              >
                Usage
              </dt>
              <dd
                aria-label="Usage value"
                class=""
                data-ouia-component-id="Usage value"
              >
                Development
              </dd>
              <dt
                aria-label="SLA title"
                class=""
                data-ouia-component-id="SLA title"
              >
                SLA
              </dt>
              <dd
                aria-label="SLA value"
                class=""
                data-ouia-component-id="SLA value"
              >
                Self-Support
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasSLA 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Usage title"
                class=""
                data-ouia-component-id="Usage title"
              >
                Usage
              </dt>
              <dd
                aria-label="Usage value"
                class=""
                data-ouia-component-id="Usage value"
              >
                Development
              </dd>
              <dt
                aria-label="Role title"
                class=""
                data-ouia-component-id="Role title"
              >
                Role
              </dt>
              <dd
                aria-label="Role value"
                class=""
                data-ouia-component-id="Role value"
              >
                Red Hat Enterprise Linux Server
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasUsage 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="SLA title"
                class=""
                data-ouia-component-id="SLA title"
              >
                SLA
              </dt>
              <dd
                aria-label="SLA value"
                class=""
                data-ouia-component-id="SLA value"
              >
                Self-Support
              </dd>
              <dt
                aria-label="Role title"
                class=""
                data-ouia-component-id="Role title"
              >
                Role
              </dt>
              <dd
                aria-label="Role value"
                class=""
                data-ouia-component-id="Role value"
              >
                Red Hat Enterprise Linux Server
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly - loading 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Usage title"
                class=""
                data-ouia-component-id="Usage title"
              >
                Usage
              </dt>
              <dd
                aria-label="Usage value"
                class=""
                data-ouia-component-id="Usage value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="SLA title"
                class=""
                data-ouia-component-id="SLA title"
              >
                SLA
              </dt>
              <dd
                aria-label="SLA value"
                class=""
                data-ouia-component-id="SLA value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Role title"
                class=""
                data-ouia-component-id="Role title"
              >
                Role
              </dt>
              <dd
                aria-label="Role value"
                class=""
                data-ouia-component-id="Role value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Subscriptions
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Usage title"
                class=""
                data-ouia-component-id="Usage title"
              >
                Usage
              </dt>
              <dd
                aria-label="Usage value"
                class=""
                data-ouia-component-id="Usage value"
              >
                Development
              </dd>
              <dt
                aria-label="SLA title"
                class=""
                data-ouia-component-id="SLA title"
              >
                SLA
              </dt>
              <dd
                aria-label="SLA value"
                class=""
                data-ouia-component-id="SLA value"
              >
                Self-Support
              </dd>
              <dt
                aria-label="Role title"
                class=""
                data-ouia-component-id="Role title"
              >
                Role
              </dt>
              <dd
                aria-label="Role value"
                class=""
                data-ouia-component-id="Role value"
              >
                Red Hat Enterprise Linux Server
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
